fixed spacing on thumbs

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,7 +16,7 @@ div.item {
 	height: 150px;
 	width: 200px;
 	overflow: hidden;
-	margin: 0px 1.5em 1.5em 0px;
+	margin: 0px 10px 10px 0px;
 	border: 2px solid #EEE;
 	 -webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
